--- a/RibsDog/Podfile
+++ b/RibsDog/Podfile
@@ -21,6 +21,7 @@ target 'RibsDog' do
   target 'RibsDogTests' do
     inherit! :search_paths
     # Pods for testing
+    pod 'Quick'
   end
 
   target 'RibsDogUITests' do
