--- a/RibsDog/Podfile
+++ b/RibsDog/Podfile
@@ -22,6 +22,7 @@ target 'RibsDog' do
     inherit! :search_paths
     # Pods for testing
     pod 'Quick'
+    pod 'Nimble'
   end
 
   target 'RibsDogUITests' do
